# wallet

./: README.md  docker-compose.yaml  pyproject.toml
docker-build/app/: Dockerfile
wallet-aplication-on-fastapi/: alembic.ini  main.py
wallet-aplication-on-fastapi/alembic/versions/: 14005bf1e876_create_wallet_table.py  3130345c519d_create_wallet.py
wallet-aplication-on-fastapi/api/: __init__.py
wallet-aplication-on-fastapi/api/api_v1/: __init__.py  wallets.py
wallet-aplication-on-fastapi/api/api_v1/crud/: wallets.py
wallet-aplication-on-fastapi/core/: config.py
wallet-aplication-on-fastapi/core/models/: __init__.py  base.py  db_helper.py  wallet.py
wallet-aplication-on-fastapi/core/models/mixins/: created_at.py  uuid_pk.py
wallet-aplication-on-fastapi/core/schemas/: wallet.py
wallet-aplication-on-fastapi/tests/: test_wallets.py
wallet-aplication-on-fastapi/utils/: case_converter.py
