[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asincio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
